--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,25 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   provider: ^6.0.1
   carousel_slider: ^4.0.0
+  video_player: ^2.2.6
+  firebase_storage: ^10.0.6
+  image_picker: ^0.8.4+4
+  path_provider: ^2.0.6
+  image_cropper: ^1.4.1
+  flutter_image_compress: ^1.1.0
+  firebase_core: ^1.8.0
+  firebase_auth: ^3.1.4
+  cloud_firestore: ^2.5.4
+
 
 
 flutter_native_splash:
   color: "#000000"
-  image: assets/logo.png
+  image: assets/splash/splash_bg.png
   ios: true
   android: true
+  android_gravity: fill
+  ios_content_mode: scaleAspectFill
 
 
 dev_dependencies:
@@ -68,6 +80,7 @@ flutter:
     - assets/hotelLux/
     - assets/payment/
     - assets/utils/
+    - assets/splash/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
